<resources>
    <string name="app_name">GrocerEase</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed">Order placed!</string>
    <string name="track_order">Track Order</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="no_items_cart">Your cart is empty</string>
    <string name="retry">Retry</string>
</resources>
